videos scale better

--- a/css/home.css
+++ b/css/home.css
@@ -8,6 +8,11 @@ body {
   font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+#game-chat{
+	
+}
+
+
 .text-muted {
   color: #777777;
 }
