--- a/css/home.css
+++ b/css/home.css
@@ -9,9 +9,19 @@ body {
 }
 
 #game-chat{
-	
+	position: relative;
+	width: 100%;
+	height: 80%;
+	padding: 0;
+	margin: 0;
+	overflow: scroll;
 }
 
+#game-form{
+	position: relative;
+	width: 100%;
+	height: 20%;
+}
 
 .text-muted {
   color: #777777;
