--- a/css/home.css
+++ b/css/home.css
@@ -227,28 +227,28 @@ fieldset[disabled] .btn-xl.active {
   }
 }
 
-.triangle-isosceles {
+.computer-message {
   position: relative;
   padding: 15px;
-  margin: 1em 0 3em;
+  margin-left: 20px;
+  margin-top: 20px;
   color: #000;
   background: #f3961c;
   border-radius: 10px;
   background: linear-gradient(top, #f9d835, #f3961c);
 }
 
-/* creates triangle */
-.triangle-isosceles:after {
-  content: "";
-  display: block; /* reduce the damage in FF3.0 */
-  position: absolute;
-  bottom: -15px;
-  left: 50px;
-  width: 0;
-  border-width: 15px 15px 0;
-  border-style: solid;
-  border-color: #f3961c transparent;
+.user-message {
+  position: relative;
+  padding: 15px;
+  margin-left: 20px;
+  margin-top: 20px;
+  color: #000;
+  background: #f3961c;
+  border-radius: 10px;
+  background: linear-gradient(top, #f9d835, #f3961c);
 }
+
 
 header {
   background-image: url("../img/header.jpeg");
