implemented chat bubbles and fixed up some css

--- a/css/home.css
+++ b/css/home.css
@@ -15,6 +15,18 @@ body {
 	padding: 0;
 	margin: 0;
 	overflow: scroll;
+	list-style: none;
+}
+
+#game-chat li{
+  position: relative;
+  padding: 15px;
+  margin-left: 20px;
+  margin-top: 20px;
+  color: #000;
+  background: #f3961c;
+  border-radius: 10px;
+  background: linear-gradient(top, #f9d835, #f3961c);
 }
 
 #game-form{
@@ -260,17 +272,6 @@ fieldset[disabled] .btn-xl.active {
   .navbar-custom.affix .navbar-brand {
     font-size: 1.5em;
   }
-}
-
-.computer-message {
-  position: relative;
-  padding: 15px;
-  margin-left: 20px;
-  margin-top: 20px;
-  color: #000;
-  background: #f3961c;
-  border-radius: 10px;
-  background: linear-gradient(top, #f9d835, #f3961c);
 }
 
 .user-message {
