Swapped Chats and fixed width

--- a/css/home.css
+++ b/css/home.css
@@ -37,7 +37,7 @@ body {
   border: solid 5px #969696;
 }
 
-.game-message{
+.game-messageR{
   position: relative;
 	display: table;
   padding: 15px;
@@ -49,7 +49,7 @@ body {
   background: linear-gradient(top, #f9d835, #f3961c);
 }
 
-.game-messageR{
+.game-message{
   position: relative;
 	display: table;
   padding: 15px;
@@ -60,6 +60,7 @@ body {
   color: white;
   background: #008B8B;
   border-radius: 10px;
+  width: auto;
   background: linear-gradient(top, #f9d835, #f3961c);
 }
 
