Minor width fix

--- a/css/home.css
+++ b/css/home.css
@@ -46,6 +46,7 @@ body {
   color: #000;
   background: #f3961c;
   border-radius: 10px;
+  width: auto;
   background: linear-gradient(top, #f9d835, #f3961c);
 }
 
